trash files fixed

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,8 +22,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".activities.SignUpActivity" />
-        <activity android:name=".Login" />
-        <activity android:name=".menu"></activity>
+        <activity android:name=".activities.Login" />
     </application>
 
 </manifest>
