--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,8 +6,8 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
-    <uses-permission android:name="android.permission.INTERNET"/>
-    
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -19,34 +19,43 @@
 
         </activity>
         <activity android:name=".activities.ProfileActivity">
-            <intent-filter>
+            <!--<intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
-            <!--</intent-filter>-->
-            <!--<intent-filter>-->
-                <!--<action android:name=".activities.ProfileActivity"/>-->
-                <!--<category android:name="android.intent.category.DEFAULT"/>-->
-            </intent-filter>
+                &lt;!&ndash;</intent-filter>&ndash;&gt;
+                &lt;!&ndash;<intent-filter>&ndash;&gt;
+                &lt;!&ndash;<action android:name=".activities.ProfileActivity"/>&ndash;&gt;
+                &lt;!&ndash;<category android:name="android.intent.category.DEFAULT"/>&ndash;&gt;
+            </intent-filter>-->
         </activity>
         <activity android:name=".activities.SignUpActivity">
+
         </activity>
 
         <activity android:name=".activities.Login" />
         <activity
-            android:name=".activities.menu"
+            android:name=".activities.MainActivity"
             android:label="@string/title_activity_menu"
             android:theme="@style/AppTheme">
-
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+                <!--</intent-filter>-->
+                <!--<intent-filter>-->
+                <!--<action android:name=".activities.ProfileActivity"/>-->
+                <!--<category android:name="android.intent.category.DEFAULT"/>-->
+            </intent-filter>
         </activity>
-        <service android:name=".firebase.MyFMS"
+
+        <service
+            android:name=".firebase.MyFMS"
             android:stopWithTask="false">
             <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
 
     </application>
-
 
 
 </manifest>
