--- a/gradle.properties
+++ b/gradle.properties
@@ -8,6 +8,6 @@
 # The setting is particularly useful for tweaking memory settings.
 org.gradle.jvmargs=-Xmx920m
 # When configured, Gradle will run in incubating parallel mode.
-# This option should only be used with decoupled projects. More details, visit
+# This option should only be used with decoupled projectEntities. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
